# oi-coding-template-v5

./: .env.example  .gitignore  Dockerfile.hud  README.md  env.py  pyproject.toml
problems/blokovi/input/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  dummy3.txt
problems/blokovi/output/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  dummy1.txt  dummy3.txt
problems/dna/input/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  dummy2.txt  dummy3.txt
problems/dna/output/: 10.txt  6.txt  7.txt  8.txt  9.txt
problems/kampanja/input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  dummy1.txt  dummy2.txt
problems/kolekcija/input/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
problems/kolekcija/output/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
problems/kosare/input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  dummy1.txt  dummy2.txt  dummy3.txt
problems/kosare/output/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
problems/pastele/input/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  dummy1.txt  dummy2.txt  dummy3.txt
problems/pastele/output/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  dummy1.txt  dummy2.txt  dummy3.txt
problems/place/input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  dummy1.txt  dummy2.txt  dummy3.txt
src/hud_controller/: checkers.py  entrypoint.sh  grading_server.py  oi_grading_runner.py  spec.py  utils.py
tasks/: __init__.py  oi_scenarios.py
(+244 files in other folders)
